fix: Update navigation visibility and refine heading font sizes for better layout

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -570,7 +570,7 @@ footer.sticky-bottom {
 
   h1 {
     color: var(--global-theme-color);
-    font-size: 2rem; //! blog 제목 사이즈
+    font-size: 2.2rem; //! blog 제목 사이즈
   }
 
   h2 {
@@ -605,7 +605,7 @@ footer.sticky-bottom {
 
 h3 {
   .post-title {
-    font-size: 1.3rem;
+    font-size: 1.5rem;  //! post 제목 사이즈
   }
 }
 
